Spacing in buttom bar and place for module menu icon fixed

--- a/openxava/src/main/resources/META-INF/resources/xava/style/base.css
+++ b/openxava/src/main/resources/META-INF/resources/xava/style/base.css
@@ -741,7 +741,7 @@ input[type="text"]:disabled, input[type="password"]:disabled, input[type="file"]
 
 .ox-web-url a {
 	position: relative; 
-	right: 25px;" 
+	right: 25px;
 }
 
 .flatpickr-day.selected {
@@ -1055,7 +1055,7 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus
 	margin-left: 0;
 }
 
-.ox-list-header a, .ui-widget-content .ox-list-header a, .ox-customize-controls .mdi-sort-numeric, .ox-customize-controls .mdi-sort-alphabetical,
+.ox-list-header a, .ui-widget-content .ox-list-header a, .ox-customize-controls .mdi-sort-numeric-variant, .ox-customize-controls .mdi-sort-alphabetical-variant,
 .ox-customize-controls .mdi-filter, .ox-customize-controls .mdi-filter-remove, 
 .ox-collection-list-actions .ox-button-bar-button a, .ox-collection-list-actions .ox-button-bar-button i,
 i, .ox-icon i.mdi-close-circle,
@@ -1148,8 +1148,8 @@ i.module-loading  {
 i:hover, .ox-icon i.mdi-plus:hover, .ox-icon i.mdi-close-circle:hover,
 .ox-list-header a:hover, .ox-list-header a:hover i,
 .ox-image-link:hover i, .ox-page-navigation:hover,
-.ox-customize-controls .mdi-sort-numeric:hover, .ox-customize-controls a:hover .mdi-sort-numeric, 
-.ox-customize-controls .mdi-sort-alphabetical:hover, .ox-customize-controls a:hover .mdi-sort-alphabetical,
+.ox-customize-controls .mdi-sort-numeric-variant:hover, .ox-customize-controls a:hover .mdi-sort-numeric-variant, 
+.ox-customize-controls .mdi-sort-alphabetical-variant:hover, .ox-customize-controls a:hover .mdi-sort-alphabetical-variant,
 .ox-customize-controls .mdi-filter:hover, 
 .ox-customize-controls .mdi-filter-remove:hover,
 .ox-charts .ox-element-collection .ox-image-link:hover i {            
@@ -1167,6 +1167,10 @@ i:hover, .ox-icon i.mdi-plus:hover, .ox-icon i.mdi-close-circle:hover,
 
 i {
 	vertical-align: -2px;  
+}
+
+i.mdi {
+	line-height: 18.2px;
 }
 
 .mdi-border-color {
